vm/opensearch/sample/ingress-resource-1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource-1
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host:  abd65cd03bcad493994b59665010dd0b-5c08f134b423537b.elb.ap-southeast-1.amazonaws.com
    http:
      paths:
      - path: /blue/(.*)
        pathType: Prefix
        backend:
          service:
            name: nginx-deploy-blue
            port: 
              number: 80      
      - path: /green/(.*)
        pathType: Prefix
        backend:
          service:
            name: nginx-deploy-green
            port: 
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-deploy-main
            port: 
              number: 80
