vm/opensearch/sample/test.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echomap
spec:
  rules:
  - host: aab0fb8373da347b2bbec19c27622548-ed034f803fa8b4ac.elb.ap-southeast-1.amazonaws.com
    http:
      paths:
      - path: /foo
        pathType: Prefix
        backend:
          service: 
            name: echoheaders-x
            port: 
              number: 80
  - host: bar.baz.com
    http:
      paths:
      - path: /bar
        pathType: Prefix
        backend:
          service: 
            name: echoheaders-y
            port: 
              number: 80
      - path: /foo
        pathType: Prefix
        backend:
          service:
            name: echoheaders-x
            port: 
              number: 80
